--- a/CNN-dry run.ipynb
+++ b/CNN-dry run.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Readind data and convert to ndarray"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -224,7 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x_train = np.array(tmp_df.ix[:,1:785])\n",
+    "y_train = np.array(tmp_df.ix[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -232,31 +251,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
+       "(5, 784)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_trian = np.array(tmp_df.ix[:,1:785])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "np.array?"
+    "x_train.shape"
    ]
   },
   {
@@ -299,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -311,21 +315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "model.add(Dense(units=64, input_dim=100))\n",
+    "model.add(Dense(units=5, input_dim=784))\n",
     "model.add(Activation('relu'))\n",
-    "model.add(Dense(units=10))\n",
-    "model.add(Activation('softmax'))"
+    "# model.add(Dense(units=10))\n",
+    "# model.add(Activation('softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -338,13 +342,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "model.fit?"
+    "# learn dl model\n",
+    "# model.fit(x_train, y_train, epochs=5, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.7229 - acc: 0.4920     \n",
+      "Epoch 2/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.7052 - acc: 0.5340     \n",
+      "Epoch 3/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6949 - acc: 0.5290     \n",
+      "Epoch 4/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6820 - acc: 0.5560     \n",
+      "Epoch 5/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6749 - acc: 0.5870     \n",
+      "Epoch 6/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6666 - acc: 0.5870     \n",
+      "Epoch 7/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6556 - acc: 0.6190     \n",
+      "Epoch 8/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6553 - acc: 0.6230     \n",
+      "Epoch 9/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6428 - acc: 0.6390     \n",
+      "Epoch 10/10\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6272 - acc: 0.6630     \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1a45641a7f0>"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For a single-input model with 2 classes (binary classification):\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(32, activation='relu', input_dim=500))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "# model.add(Activation('softmax'))\n",
+    "model.compile(optimizer='rmsprop',\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Generate dummy data\n",
+    "import numpy as np\n",
+    "data = np.random.random((1000, 500))\n",
+    "labels = np.random.randint(2, size=(1000, 1))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Train the model, iterating on the data in batches of 32 samples\n",
+    "model.fit(data, labels, epochs=10, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# For a single-input model with 10 classes (categorical classification):\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(32, activation='relu', input_dim=100))\n",
+    "model.add(Dense(10, activation='softmax'))\n",
+    "model.compile(optimizer='rmsprop',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Generate dummy data\n",
+    "import numpy as np\n",
+    "data = np.random.random((1000, 100))\n",
+    "labels = np.random.randint(10, size=(1000, 1))\n",
+    "\n",
+    "# Convert labels to categorical one-hot encoding\n",
+    "one_hot_labels = keras.utils.to_categorical(labels, num_classes=10)\n",
+    "\n",
+    "# Train the model, iterating on the data in batches of 32 samples\n",
+    "model.fit(data, one_hot_labels, epochs=10, batch_size=32)\n"
    ]
   }
  ],
