dry run yields into 11% acc

--- a/CNN-dry run.ipynb
+++ b/CNN-dry run.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,11 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42000\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -219,19 +226,20 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmp_df = df_train.head()\n",
-    "tmp_df"
+    "tmp_df = df_train\n",
+    "print(len(tmp_df))\n",
+    "tmp_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -243,24 +251,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(5, 784)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
     }
    ],
    "source": [
-    "x_train.shape"
+    "import keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_labels = keras.utils.to_categorical(y_train, num_classes=10)"
    ]
   },
   {
@@ -272,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -303,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -315,21 +331,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "model.add(Dense(units=5, input_dim=784))\n",
+    "model.add(Dense(units=10, input_dim=784))\n",
     "model.add(Activation('relu'))\n",
-    "# model.add(Dense(units=10))\n",
-    "# model.add(Activation('softmax'))"
+    "model.add(Dense(units=10))\n",
+    "model.add(Activation('softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -342,21 +358,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# learn dl model\n",
-    "# model.fit(x_train, y_train, epochs=5, batch_size=32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -364,87 +369,52 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.7229 - acc: 0.4920     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3018 - acc: 0.1111     \n",
       "Epoch 2/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.7052 - acc: 0.5340     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n",
       "Epoch 3/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.6949 - acc: 0.5290     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n",
       "Epoch 4/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.6820 - acc: 0.5560     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n",
       "Epoch 5/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.6749 - acc: 0.5870     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n",
       "Epoch 6/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.6666 - acc: 0.5870     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n",
       "Epoch 7/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.6556 - acc: 0.6190     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n",
       "Epoch 8/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.6553 - acc: 0.6230     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n",
       "Epoch 9/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.6428 - acc: 0.6390     \n",
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n",
       "Epoch 10/10\n",
-      "1000/1000 [==============================] - 0s - loss: 0.6272 - acc: 0.6630     \n"
+      "42000/42000 [==============================] - 2s - loss: 2.3013 - acc: 0.1115     \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1a45641a7f0>"
+       "<keras.callbacks.History at 0x1d4ff9897f0>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# For a single-input model with 2 classes (binary classification):\n",
-    "\n",
-    "model = Sequential()\n",
-    "model.add(Dense(32, activation='relu', input_dim=500))\n",
-    "model.add(Dense(1, activation='sigmoid'))\n",
-    "# model.add(Activation('softmax'))\n",
-    "model.compile(optimizer='rmsprop',\n",
-    "              loss='binary_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "# Generate dummy data\n",
-    "import numpy as np\n",
-    "data = np.random.random((1000, 500))\n",
-    "labels = np.random.randint(2, size=(1000, 1))\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Train the model, iterating on the data in batches of 32 samples\n",
-    "model.fit(data, labels, epochs=10, batch_size=32)"
+    "# learn dl model\n",
+    "model.fit(x_train, y_labels, epochs=10, batch_size=32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# For a single-input model with 10 classes (categorical classification):\n",
-    "\n",
-    "model = Sequential()\n",
-    "model.add(Dense(32, activation='relu', input_dim=100))\n",
-    "model.add(Dense(10, activation='softmax'))\n",
-    "model.compile(optimizer='rmsprop',\n",
-    "              loss='categorical_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "# Generate dummy data\n",
-    "import numpy as np\n",
-    "data = np.random.random((1000, 100))\n",
-    "labels = np.random.randint(10, size=(1000, 1))\n",
-    "\n",
-    "# Convert labels to categorical one-hot encoding\n",
-    "one_hot_labels = keras.utils.to_categorical(labels, num_classes=10)\n",
-    "\n",
-    "# Train the model, iterating on the data in batches of 32 samples\n",
-    "model.fit(data, one_hot_labels, epochs=10, batch_size=32)\n"
+    "model.fit?"
    ]
   }
  ],
