--- a/CNN basics.ipynb
+++ b/CNN basics.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -220,35 +220,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.3594 - acc: 0.1010     \n",
-      "Epoch 2/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.3028 - acc: 0.1120     \n",
-      "Epoch 3/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.2966 - acc: 0.1190     \n",
-      "Epoch 4/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.2863 - acc: 0.1280     \n",
-      "Epoch 5/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.2733 - acc: 0.1290     \n",
-      "Epoch 6/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.2616 - acc: 0.1490     \n",
-      "Epoch 7/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.2414 - acc: 0.1630     \n",
-      "Epoch 8/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.2254 - acc: 0.1770     \n",
-      "Epoch 9/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.2098 - acc: 0.1950     \n",
-      "Epoch 10/10\n",
-      "1000/1000 [==============================] - 0s - loss: 2.1881 - acc: 0.1970     \n"
+      "Epoch 1/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.3331 - acc: 0.0900     \n",
+      "Epoch 2/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.3018 - acc: 0.1160     \n",
+      "Epoch 3/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.2998 - acc: 0.1080     \n",
+      "Epoch 4/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.2953 - acc: 0.1210     \n",
+      "Epoch 5/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.2791 - acc: 0.1200     \n",
+      "Epoch 6/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.2685 - acc: 0.1410     \n",
+      "Epoch 7/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.2453 - acc: 0.1480     \n",
+      "Epoch 8/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.2243 - acc: 0.1650     \n",
+      "Epoch 9/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.1986 - acc: 0.1930     \n",
+      "Epoch 10/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.1639 - acc: 0.2090     \n",
+      "Epoch 11/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.1286 - acc: 0.2340     \n",
+      "Epoch 12/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.1077 - acc: 0.2480     \n",
+      "Epoch 13/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.0844 - acc: 0.2470     \n",
+      "Epoch 14/60\n",
+      "1000/1000 [==============================] - 0s - loss: 2.0412 - acc: 0.2890     \n",
+      "Epoch 15/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.9990 - acc: 0.3150     \n",
+      "Epoch 16/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.9778 - acc: 0.3120     \n",
+      "Epoch 17/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.9353 - acc: 0.3520     \n",
+      "Epoch 18/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.8944 - acc: 0.3890     \n",
+      "Epoch 19/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.8514 - acc: 0.4030     \n",
+      "Epoch 20/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.8255 - acc: 0.4080     \n",
+      "Epoch 21/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.7847 - acc: 0.4570     \n",
+      "Epoch 22/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.7575 - acc: 0.4580     \n",
+      "Epoch 23/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.7073 - acc: 0.4800     \n",
+      "Epoch 24/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.6727 - acc: 0.5090     \n",
+      "Epoch 25/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.6391 - acc: 0.5000     \n",
+      "Epoch 26/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.6058 - acc: 0.5290     \n",
+      "Epoch 27/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.5586 - acc: 0.5420     \n",
+      "Epoch 28/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.5416 - acc: 0.5420     \n",
+      "Epoch 29/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.5036 - acc: 0.5780     \n",
+      "Epoch 30/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.4493 - acc: 0.6070     \n",
+      "Epoch 31/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.4140 - acc: 0.6050     \n",
+      "Epoch 32/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.3773 - acc: 0.6330     \n",
+      "Epoch 33/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.3527 - acc: 0.6400     \n",
+      "Epoch 34/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.3172 - acc: 0.6500     \n",
+      "Epoch 35/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.2901 - acc: 0.6710     \n",
+      "Epoch 36/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.2773 - acc: 0.6450     \n",
+      "Epoch 37/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.2207 - acc: 0.6920     \n",
+      "Epoch 38/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.1876 - acc: 0.6970     \n",
+      "Epoch 39/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.1567 - acc: 0.7050     \n",
+      "Epoch 40/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.1388 - acc: 0.7220     \n",
+      "Epoch 41/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.1111 - acc: 0.7080     \n",
+      "Epoch 42/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.0786 - acc: 0.7360     \n",
+      "Epoch 43/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.0598 - acc: 0.7280     \n",
+      "Epoch 44/60\n",
+      "1000/1000 [==============================] - 0s - loss: 1.0196 - acc: 0.7330     \n",
+      "Epoch 45/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.9863 - acc: 0.7630     \n",
+      "Epoch 46/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.9685 - acc: 0.7400     \n",
+      "Epoch 47/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.9474 - acc: 0.7640     \n",
+      "Epoch 48/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.9197 - acc: 0.7800     \n",
+      "Epoch 49/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.8760 - acc: 0.8050     \n",
+      "Epoch 50/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.8693 - acc: 0.7860     \n",
+      "Epoch 51/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.8485 - acc: 0.8040     \n",
+      "Epoch 52/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.8241 - acc: 0.8200     \n",
+      "Epoch 53/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.8031 - acc: 0.8290     \n",
+      "Epoch 54/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.7711 - acc: 0.8300     \n",
+      "Epoch 55/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.7432 - acc: 0.8420     \n",
+      "Epoch 56/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.7280 - acc: 0.8570     \n",
+      "Epoch 57/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.7086 - acc: 0.8440     \n",
+      "Epoch 58/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6972 - acc: 0.8600     \n",
+      "Epoch 59/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6652 - acc: 0.8690     \n",
+      "Epoch 60/60\n",
+      "1000/1000 [==============================] - 0s - loss: 0.6643 - acc: 0.8620     \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x225cc4dc470>"
+       "<keras.callbacks.History at 0x225ccbe76d8>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +372,7 @@
     "one_hot_labels = keras.utils.to_categorical(labels, num_classes=10)\n",
     "\n",
     "# Train the model, iterating on the data in batches of 32 samples\n",
-    "model.fit(data, one_hot_labels, epochs=10, batch_size=32)"
+    "model.fit(data, one_hot_labels, epochs=60, batch_size=32)"
    ]
   },
   {
