--- a/CNN imporvement.ipynb
+++ b/CNN imporvement.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -382,74 +382,74 @@
      "text": [
       "Train on 33600 samples, validate on 8400 samples\n",
       "Epoch 1/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2801 - acc: 0.2998 - val_loss: 11.3387 - val_acc: 0.2961\n",
+      "33600/33600 [==============================] - 3s - loss: 2.3301 - acc: 0.1847 - val_loss: 2.0580 - val_acc: 0.2299\n",
       "Epoch 2/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2838 - acc: 0.2994 - val_loss: 11.3564 - val_acc: 0.2950\n",
+      "33600/33600 [==============================] - 2s - loss: 1.9307 - acc: 0.3159 - val_loss: 1.6868 - val_acc: 0.3886\n",
       "Epoch 3/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2853 - acc: 0.2994 - val_loss: 11.3754 - val_acc: 0.2936\n",
+      "33600/33600 [==============================] - 2s - loss: 1.6815 - acc: 0.4063 - val_loss: 1.6495 - val_acc: 0.4373\n",
       "Epoch 4/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2867 - acc: 0.2994 - val_loss: 11.3980 - val_acc: 0.2925\n",
+      "33600/33600 [==============================] - 2s - loss: 1.5182 - acc: 0.4656 - val_loss: 1.5153 - val_acc: 0.4849\n",
       "Epoch 5/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2725 - acc: 0.3003 - val_loss: 11.3272 - val_acc: 0.2969\n",
+      "33600/33600 [==============================] - 2s - loss: 1.4737 - acc: 0.4844 - val_loss: 1.4640 - val_acc: 0.4931\n",
       "Epoch 6/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2814 - acc: 0.2997 - val_loss: 11.3281 - val_acc: 0.2968\n",
+      "33600/33600 [==============================] - 2s - loss: 1.4702 - acc: 0.4872 - val_loss: 1.4671 - val_acc: 0.5076\n",
       "Epoch 7/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2726 - acc: 0.3004 - val_loss: 11.3533 - val_acc: 0.2952\n",
+      "33600/33600 [==============================] - 2s - loss: 1.4741 - acc: 0.4823 - val_loss: 1.5114 - val_acc: 0.4824\n",
       "Epoch 8/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2677 - acc: 0.3007 - val_loss: 11.3447 - val_acc: 0.2961\n",
+      "33600/33600 [==============================] - 2s - loss: 1.4956 - acc: 0.4847 - val_loss: 1.5720 - val_acc: 0.4917\n",
       "Epoch 9/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2732 - acc: 0.3002 - val_loss: 11.3225 - val_acc: 0.2973\n",
+      "33600/33600 [==============================] - 2s - loss: 1.4932 - acc: 0.4745 - val_loss: 1.4935 - val_acc: 0.4801\n",
       "Epoch 10/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2644 - acc: 0.3008 - val_loss: 11.3466 - val_acc: 0.2952\n",
+      "33600/33600 [==============================] - 2s - loss: 1.5087 - acc: 0.4800 - val_loss: 1.5885 - val_acc: 0.4929\n",
       "Epoch 11/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2653 - acc: 0.3008 - val_loss: 11.3469 - val_acc: 0.2957\n",
+      "33600/33600 [==============================] - 3s - loss: 1.5281 - acc: 0.4774 - val_loss: 1.5311 - val_acc: 0.4710\n",
       "Epoch 12/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2672 - acc: 0.3007 - val_loss: 11.3257 - val_acc: 0.2969\n",
+      "33600/33600 [==============================] - 3s - loss: 1.5075 - acc: 0.4810 - val_loss: 1.4774 - val_acc: 0.4723\n",
       "Epoch 13/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2525 - acc: 0.3016 - val_loss: 11.3299 - val_acc: 0.2967\n",
+      "33600/33600 [==============================] - 2s - loss: 1.5412 - acc: 0.4883 - val_loss: 1.5596 - val_acc: 0.4838\n",
       "Epoch 14/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2554 - acc: 0.3014 - val_loss: 11.3258 - val_acc: 0.2970\n",
+      "33600/33600 [==============================] - 2s - loss: 1.5436 - acc: 0.4831 - val_loss: 1.5440 - val_acc: 0.4813\n",
       "Epoch 15/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2484 - acc: 0.3019 - val_loss: 11.4079 - val_acc: 0.2915\n",
+      "33600/33600 [==============================] - 3s - loss: 1.5525 - acc: 0.4839 - val_loss: 1.5408 - val_acc: 0.4821\n",
       "Epoch 16/30\n",
-      "33600/33600 [==============================] - 3s - loss: 11.2614 - acc: 0.3009 - val_loss: 11.3375 - val_acc: 0.2961\n",
+      "33600/33600 [==============================] - 2s - loss: 1.5601 - acc: 0.4798 - val_loss: 1.5642 - val_acc: 0.4780\n",
       "Epoch 17/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2718 - acc: 0.3005 - val_loss: 11.3286 - val_acc: 0.2970\n",
+      "33600/33600 [==============================] - 3s - loss: 1.5761 - acc: 0.4784 - val_loss: 1.5766 - val_acc: 0.4626\n",
       "Epoch 18/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2625 - acc: 0.3010 - val_loss: 11.3263 - val_acc: 0.2970\n",
+      "33600/33600 [==============================] - 3s - loss: 1.5639 - acc: 0.4812 - val_loss: 1.6190 - val_acc: 0.4805\n",
       "Epoch 19/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2504 - acc: 0.3017 - val_loss: 11.3180 - val_acc: 0.2975\n",
+      "33600/33600 [==============================] - 2s - loss: 1.5867 - acc: 0.4773 - val_loss: 1.5806 - val_acc: 0.4771\n",
       "Epoch 20/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2553 - acc: 0.3015 - val_loss: 11.3609 - val_acc: 0.2948\n",
+      "33600/33600 [==============================] - 2s - loss: 1.5779 - acc: 0.4788 - val_loss: 1.5672 - val_acc: 0.4682\n",
       "Epoch 21/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2525 - acc: 0.3016 - val_loss: 11.3384 - val_acc: 0.2963\n",
+      "33600/33600 [==============================] - 2s - loss: 1.5767 - acc: 0.4765 - val_loss: 1.7102 - val_acc: 0.4792\n",
       "Epoch 22/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2510 - acc: 0.3017 - val_loss: 11.3116 - val_acc: 0.2980\n",
+      "33600/33600 [==============================] - 2s - loss: 1.6346 - acc: 0.4838 - val_loss: 1.6062 - val_acc: 0.4860\n",
       "Epoch 23/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2413 - acc: 0.3025 - val_loss: 11.3331 - val_acc: 0.2967\n",
+      "33600/33600 [==============================] - 2s - loss: 1.6073 - acc: 0.4789 - val_loss: 1.6613 - val_acc: 0.4901\n",
       "Epoch 24/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2665 - acc: 0.3008 - val_loss: 11.3135 - val_acc: 0.2980\n",
+      "33600/33600 [==============================] - 3s - loss: 1.6103 - acc: 0.4838 - val_loss: 1.5904 - val_acc: 0.4811\n",
       "Epoch 25/30\n",
-      "33600/33600 [==============================] - 3s - loss: 11.2380 - acc: 0.3025 - val_loss: 11.3435 - val_acc: 0.2960\n",
+      "33600/33600 [==============================] - 3s - loss: 1.6387 - acc: 0.4852 - val_loss: 1.7151 - val_acc: 0.4875\n",
       "Epoch 26/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2442 - acc: 0.3021 - val_loss: 11.3269 - val_acc: 0.2968\n",
+      "33600/33600 [==============================] - 3s - loss: 1.6227 - acc: 0.4798 - val_loss: 1.6064 - val_acc: 0.4800\n",
       "Epoch 27/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2422 - acc: 0.3023 - val_loss: 11.3081 - val_acc: 0.2981\n",
+      "33600/33600 [==============================] - 3s - loss: 1.6344 - acc: 0.4781 - val_loss: 1.6333 - val_acc: 0.4717\n",
       "Epoch 28/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2516 - acc: 0.3016 - val_loss: 11.3035 - val_acc: 0.2982\n",
+      "33600/33600 [==============================] - 3s - loss: 1.6180 - acc: 0.4805 - val_loss: 1.7596 - val_acc: 0.4921\n",
       "Epoch 29/30\n",
-      "33600/33600 [==============================] - 3s - loss: 11.2372 - acc: 0.3026 - val_loss: 11.3239 - val_acc: 0.2970\n",
+      "33600/33600 [==============================] - 4s - loss: 1.6437 - acc: 0.4844 - val_loss: 1.8017 - val_acc: 0.4948\n",
       "Epoch 30/30\n",
-      "33600/33600 [==============================] - 2s - loss: 11.2428 - acc: 0.3022 - val_loss: 11.3035 - val_acc: 0.2986\n"
+      "33600/33600 [==============================] - 4s - loss: 1.6440 - acc: 0.4843 - val_loss: 1.7950 - val_acc: 0.4879\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1a77565b588>"
+       "<keras.callbacks.History at 0x2425e010e80>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,11 +473,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "scrolled": true
+   },
+   "source": [
+    "## Prediction test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_test = pd.read_csv('F:/mnist/data/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x_test = np.array(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
