48% acc at kaggle

--- a/CNN imporvement.ipynb
+++ b/CNN imporvement.ipynb
@@ -506,36 +506,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "np_prediction = model.predict(x_test)"
+    "# this method will take model and numpy array data\n",
+    "def get_submission_df(model, data):\n",
+    "    np_prediction = model.predict_classes(data)\n",
+    "    \n",
+    "    df_submission = pd.DataFrame()\n",
+    "    df_submission['ImageId'] = list(range(1,len(np_prediction)+1))\n",
+    "    df_submission['Label'] = np_prediction\n",
+    "    \n",
+    "    return df_submission"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(28000, 10)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26304/28000 [===========================>..] - ETA: 0s"
+     ]
     }
    ],
    "source": [
-    "np_prediction.shape"
+    "df_submission = get_submission_df(model, x_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_submission.to_csv('F:/mnist/data/submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
