--- a/Mnist with keras.ipynb
+++ b/Mnist with keras.ipynb
@@ -241,7 +241,9 @@
     "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=10, batch_size=200)\n",
     "# Final evaluation of the model\n",
     "scores = model.evaluate(X_test, y_test, verbose=0)\n",
-    "print(\"Large CNN Error: %.2f%%\" % (100-scores[1]*100))"
+    "print(\"Large CNN Error: %.2f%%\" % (100-scores[1]*100))\n",
+    "\n",
+    "## memory shortage"
    ]
   },
   {
